manifest/objects/rh2__PS_Rollup_Group__c.object
<CustomObject>
    <description>Used for organizing rollups into group for mass actions.</description>
    <fields>
        <fullName>rh2__Automatic__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is Rollup Group Automatic</description>
        <label>Is Rollup Group Automatic</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rh2__Grouping_Method__c</fullName>
        <description>Grouping Method</description>
        <label>Grouping Method</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rh2__Grouping_Value__c</fullName>
        <description>Grouping Value</description>
        <label>Grouping Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rh2__Rollup_Group_Label__c</fullName>
        <description>Rollup Group Label</description>
        <label>Rollup Group Label</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Rollup Group</label>
    <nameField>
        <displayFormat>RG-{0000}</displayFormat>
        <label>PS_Rollup_Group Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Rollup Groups</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>